--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ document.createElement("article" );
 				</div>
 				<div class="feature_text">
 					<p>
-						&nbsp; 
+						
                                                 <a class="link-homepage-feature" href="https://ed.stanford.edu/news/stanfords-gardner-center-partners-calif-schools-new-reform-plan">
 					Gardner Center teams up with CA schools on new standards to measure success<br><br>
                                                 </a>	
@@ -142,12 +142,11 @@ document.createElement("article" );
 					<p>
 
                               
-	  <li><a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1061">Brown Bag Seminar: Carol Dweck<br>Mindsets: Increasing Educational Equity & Opportunity</a><br><br>					
+	  <a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1061">Brown Bag Seminar: Carol Dweck<br><br>Mindsets: Increasing Educational Equity & Opportunity</a><br><br>					
 
 
 
 
-						</ul>
 <br>
                                         <a class="link-homepage-feature" href="/news/news.html">More Events >></a>
 
