--- a/index.new.html
+++ b/index.new.html
@@ -185,7 +185,7 @@ var __adobewebfontsappname__ = "muse";
       </ul>
      </div>
      <div class="clip_frame grpelem" id="u7712"><!-- image -->
-      <img class="block" id="u7712_img" src="images/fromdatatoaction.gif" alt="" width="81" height="122"/>
+      <img class="block" id="u7712_img" src="/images/YELLcover.jpg" alt="" width="81" height="122"/>
      </div>
      <div class="grpelem" id="u1020"><!-- simple frame --></div>
      <div class="grpelem" id="u1021"><!-- simple frame --></div>
@@ -198,7 +198,7 @@ var __adobewebfontsappname__ = "muse";
      <div class="clearfix grpelem" id="u1038-12"><!-- content -->
       <p id="u1038-4"><a class="nonblock" href="http://jgc.stanford.edu" target="_blank">#communitycollabs</a></p>
       <p id="u1038-5">&nbsp;</p>
-      <p id="u1038-10"><span id="u1038-6">Across the country, community collaboratives are partnering with researchers to use data to improve the lives of youth.</span>&nbsp;<span id="u1038-8">#communitycollabs</span>&nbsp;is our town hall to address the great potential, as well as the challenges, of working together.</p>
+      <p id="u1038-10"><span id="u1038-6">Across the country, community collaboratives are partnering with researchers to use data to improve the lives of youth.</span>&nbsp;<span id="u1038-8"><br>#communitycollabs</span>&nbsp;is our town hall to address the great potential, as well as the challenges, of working together.</p>
      </div>
      <div class="clearfix grpelem" id="u1042-10"><!-- content -->
       <p>The John Gardner Center</p>
@@ -246,7 +246,7 @@ var __adobewebfontsappname__ = "muse";
        <p><span id="u1182">Carol Dweck</span></p>
        <p><span id="u1182-3">Mindsets: Increasing Educational Equity and Opportunity</span></p>
        <p>&nbsp;</p>
-       <p>DATE: February 24, 2014 &nbsp; TIME: Noon - 1:30 pm</p>
+       <p>DATE: February 24, 2014 &nbsp;<br> TIME: Noon - 1:30 pm</p>
        <p>LOCATION: CERAS Learning Hall, Stanford University</p>
        <p>&nbsp;</p>
       </div>
