--- a/our_work/content-feip.html
+++ b/our_work/content-feip.html
@@ -30,14 +30,13 @@
     </div> <!--end right side box div-->
     </aside>
 
+<p>Through its Family Engagement Impact Project (FEIP), the Heising-Simons Foundation aims to improve educational outcomes for low-income immigrant children in six selected communities within Santa Clara and San Mateo Counties by increasing family engagement at the community level.  The goal of FEIP is to strengthen partnerships to focus on better coordinating and integrating family engagement efforts across multiple organizations and constituencies.</p>
+<br>
+<p>To support the year-one planning phase of this project, the Gardner Center is designing and conducting a needs assessment in each of the six communities for high-need families with children ages 0-8.  With the goal of mapping family needs and existing resources in each community, the Gardner Center developed a two-pronged approach including (1) interviews with lead agencies; and (2) surveys for parents and providers.  We designed the surveys in consultation with lead agencies in each of the six communities to reflect their unique concerns. Versions of the family survey were made available in multiple languages so as to be broadly accessible to a range of parents.  Over 900 people across Santa Clara and San Mateo Counties participated in these surveys.</p>
+<br>
+<p>The Gardner Center will present our research to the lead agencies in a report summarizing the data and emphasizing local findings for each community. The Gardner Center will work alongside these agencies to interpret the data and identify actionable findings to inform each community’s planning for the implementation phase of the project.</p>
 
-<p>Through its Family Engagement Impact Project (FEIP), the Heising-Simons Foundation aims to improve educational outcomes for low-income immigrant children in Santa Clara and San Mateo Counties by increasing family engagement.</p> 
-<br>
-<p>The goal of Phase I of the FEIP is to develop a plan to coordinate family engagement programming across age groups, grades, community-based organizations, schools, and systems.  The Gardner Center’s role is to design and conduct a needs assessment in six selected partner communities within Pescadero, Redwood City, San Jose, and Sunnyvale. Consisting of surveys with parents and providers, this needs assessment will highlight the existing resource landscape for high-need families with children ages 0-8.</p>  
-<br>
-<p>The needs assessment will focus on the following four areas of inquiry: 1) local family demographics, needs, and strengths; 2) local family engagement practices and perceptions; 3) existing family engagement programs, practices, and resources in each community; and 4) coordination and services related to transitions (e.g. preschool to Kindergarten). We designed the surveys in consultation with residents of each of the six communities to reflect their unique concerns, and copies were made available in multiple languages so as to be broadly accessible to a range of parents.</p>
-<br>
-<p>The Gardner Center will present our findings to the six partner communities, including a summary of the data across sites and brief individual reports that emphasize local findings.  The Gardner Center will partner with these communities in interpreting the data and help them to identify actionable findings to inform both current and future work.</p> 
+ 
 
 
   </div>
