--- a/our_work/content-gardengrove.html
+++ b/our_work/content-gardengrove.html
@@ -30,19 +30,11 @@
 
 
 
-
-<p> Garden Grove Unified School District (GGUSD) is the 11th largest district in California, with 67 operational schools and approximately 48,000 enrolled students. The student population is ethnically diverse and predominantly low income; nearly half of the students are English Language Learners. While a strong, district-wide culture of evaluative inquiry and practices persists, budgetary and human resources constraints hinder GGUSD's ability to use data regularly and in more efficient ways. Our partnership affords the structure and supports necessary for GGUSD to examine data for ongoing inquiry, decision making, and reforms aimed at the system (district), setting (classroom), and individual (student) levels.</p>
+<p>With 70 operational schools serving approximately 48,000 students, Garden Grove Unified School District (GGUSD) ranks as the 11th largest district in California and the third largest in Orange County. The district covers roughly 30 miles of territory, serving most of Garden Grove and portions of six neighboring communities—Anaheim, Cypress, Fountain Valley, Santa Ana, and Westminster.  The student population in GGUSD is ethnically diverse, a majority of whom are Latinos (48%), followed by Caucasians (30%), Asians (15%), Filipinos (2%), and African Americans (2%). English is the second language for about 40% of the district’s students, and more than half qualify for subsidized school meals.</p>
 <br>
-GGUSD has identified two key research questions to guide our work:
+<p>While a strong culture of evidence-based decision making exists in GGUSD, budgetary and human resource constraints have hindered its ability to use data more frequently and on a regular basis. Our partnership helps provide the structure and supports to gather together, examine, and use data to inform change efforts happening at the individual, setting, and system levels. The district has identified two key research questions to guide our work: (1) Are students’ course placements in math predictive of their success in high school, and (2) What kind of classroom- and school-level practices cultivate students’ motivation to learn and engage academically?</p>
 <br>
-<br>
-Are students course placements in math predictive of their failure to meet graduation requirements?
-<br>
-<br>
-What kind of classroom- and school-level practices can help cultivate students' motivation to learn and academic engagement?
-<br>
-<br>
-<p>This new partnership is the first to broaden the reach of our Youth Data Archive to include Southern California. It also taps into our expertise in the areas of student motivation and academic tenacity and builds upon a decade of work in diverse communities serving young people facing multiple challenges to their academic success and healthy development. Most importantly, working with GGUSD can model a community of practice approach in Garden Grove, where interested groups (e.g., K-12 schools, community colleges, nonprofits) collaborate on an ongoing basis to identify critical youth-related issues and formulate new knowledge and strategies to tackle challenges that young people encounter.</p>
+<p>Our partnership with GGUSD broadens the reach of our Youth Data Archive to include Southern California. It also taps into our expertise in the areas of student motivation and academic tenacity, and builds upon a decade of work in diverse communities serving young people who face circumstances and conditions that impede their academic success and healthy development. Our work with the district can help model a community of practice approach in the area, where interested groups (e.g., K-12 schools, community colleges, nonprofits) collaborate to formulate knowledge and strategies that help solve many of the local challenges young people encounter.</p>
 
 <br>
 
