--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ document.createElement("article" );
 					<p>
 
                               
-	  <a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1061">Brown Bag Seminar: Carol Dweck<br><br>Mindsets: Increasing Educational Equity & Opportunity</a><br><br>					
+	  <a class="link-homepage-feature" href="http://edpolicy.stanford.edu/events/1061">Brown Bag Seminar: Carol Dweck<br>Mindsets: Increasing Educational Equity & Opportunity</a>					
 
 
 
