emergency content change from Leslie

--- a/about_jgc/content-stanford.html
+++ b/about_jgc/content-stanford.html
@@ -6,27 +6,36 @@
 
           <h1 class="title-page-header-big">At Stanford </h1>
           <br>
+<!--photolarge for  302px width and larger-->
+<!--photosmall for  200px to 302px width-->
+<div class="photosmall">
+  <div class="photosmall">
+    <!-- change the "#" below to the URL you want a user to go if they click the image-->
+    <a href="#" class="lightbox" titles="Gardner Center">
+      <img class="photosmall" src="/images/littlefield.jpg" alt="Gardner Center">
+    </a>
+  </div>
+</div>
+<p>The Gardner Center is a research and policy center situated within the <a href="https://ed.stanford.edu/">Graduate School of Education at Stanford University</a>. As such, we are privileged to access and contribute to the intellectual capacity of one of the world’s leading research institutions. Our connection to Stanford University is built on reciprocity: we work to bolster the university’s role in the fields of community-based research and youth development, and Stanford students and faculty offer us invaluable skills, knowledge, and resources to achieve our mission of effecting change to improve the lives of youth.</p>
+<br>
+<p><a href="http://jgc.stanford.edu/about_jgc/jwg.html">John W. Gardner</a>, the man behind our mission, had deep, enduring ties to the Stanford community.  Over many years, he expressed his devotion to Stanford as a student, a member of the Board of Trustees, and as a distinguished professor. In 1984, he was awarded the university’s highest honor, The Degree of Uncommon Man. In 2000, Stanford established the Gardner Center in recognition of his lifetime of public service and university citizenship.</p>
+<br>
 
-          <p> Situated within the School of Education at Stanford University, JGC has access to the intellectual resources of one of the world's leading research institutions and the ability to apply them to the Center's mission of effecting change to improve the lives of youth. </p>
-          <br>
-
-          <p>The JGC's connection to Stanford is central to how we work; JGC accelerates Stanford's leadership role in community development while JGC draws on the knowledge, expertise and resources of Stanford students and faculty in order to achieve its mission of youth development and community renewal.</p>
-          <br>
-
-          <span class="content-bold">University Connections</span>
-          <br>
-          <p>JGC engages Stanford students and faculty in both research and program-development activities.</p>
-          <br>
-          <span class="content-bold">Connecting Students to Community Youth Development Experiences</span>
-          <p>JGC provides student intern and volunteer positions, and connects Stanford service-learning courses to community-based research opportunities.</p>
-          <br>
-          <p>Through connections to our projects and our community partners, students deepen and ground academic concepts in real-world contexts, learn from practitioners and researchers in the field, and contribute their skills and knowledge to benefit community partners.</p>
-          <br>
-          <span class="content-bold">Providing Students with Research Opportunities</span> 
-          <p>We provide and facilitate student internships in collaboration with programs such as the <a href="http://urbanstudies.stanford.edu/" target="_blank">Urban Studies Program</a>, the <a href="http://prevention.stanford.edu/" target="_blank">Prevention Research Center</a>, <a href="http://studentaffairs.stanford.edu/haas" target="_blank">the Haas Center for Public Service</a> and the Stanford Undergraduate Research Programs (SURP). JGC also prepares students to conduct community-based research as part of honors theses, research fellowships and dissertations.</p>
-          <br>
-          <span class="content-bold">Partnering in to Connect Research and Practice</span> 
-          <p>JGC staff and faculty partner with others in the <a href="http://ed.stanford.edu/" target="_blank">School of Education</a>, <a href="http://med.stanford.edu/" target="_blank">School of Medicine</a>, and <a href="http://studentaffairs.stanford.edu/haas" target="_blank">Haas Center for Public Service</a> in joint research and community-based partnerships. Just as the JGC seeks to link efforts and resources in community settings, we also strive to do this with and among our University colleagues.</p>
+<p><span class="content-bold">Collaborations with Stanford Faculty.</span> As university citizens following John Gardner’s example, Gardner Center researchers actively engage with the campus community. In addition to our faculty director, <a href="http://jgc.stanford.edu/about_jgc/team_bios/prudence.html">Prudence Carter</a>, and our founding director, <a href="http://jgc.stanford.edu/about_jgc/team_bios/milbrey.html">Milbrey McLaughlin</a>, our staff has partnered with a diverse range of faculty members on a number of interdisciplinary projects. Recent faculty collaborators include:</p>
+<br>
+<a href="https://people.stanford.edu/nmardoin/">Nicole Ardoin, Assistant Professor, Graduate School of Education</a><br>
+<a href="http://www.stanford.edu/~haertel/">Edward Haertel, Jacks Family Professor of Education, Emeritus</a><br>
+<a href="http://www.stanford.edu/dept/URBS/people/faculty_advisors.html#kahan">Michael Kahan, Associate Director, Program on Urban Studies</a><br>
+<a href="http://cepa.stanford.edu/michael-kirst">Michael W. Kirst, Professor of Education and Business Administration, Emeritus</a><br>
+<a href="https://med.stanford.edu/profiles/eunice-rodriguez">Eunice Rodriguez, Associate Professor (Teaching) of Pediatrics</a><br>
+<a href="http://healthpolicy.stanford.edu/people/wrichardscott/">W. Richard Scott, Professor of Sociology,Emeritus, with courtesy appointments in the Schools of Business, Education, and Medicine</a><br>
+<a href="http://www.law.stanford.edu/profile/michael-s-wald">Michael S. Wald, Jackson Eli Reynolds Professor of Law, Emeritus</a>
+<br>
+<br>
+<p><span class="content-bold">Collaborations with Stanford Students.</span>The Gardner Center is committed to providing Stanford graduate and undergraduate students with hands-on research assistantships, internships, and volunteer opportunities. We encourage students to come to the Gardner Center with questions and ideas about community-based research. A recent inquiry from a pair of students interested in delving deeply into the theories and empirical research on community-based education and afterschool programming led to the creation of a new course entitled “Community Youth Development.”  Offered within the Graduate School of Education’s <a href="https://ed.stanford.edu/academics/masters-handbook/program-requirements/pols">Policy, Organization and Leadership Studies program</a>, the course was taught by Gardner Center research and community engagement staff and included community leaders as speakers. The Stanford students we engage with learn from practitioners and researchers in the field, deepen and ground academic concepts in real-world contexts, and contribute their own skills and knowledge to our work. The Gardner Center also prepares students to conduct community-based research as part of honors theses, research fellowships, and dissertations.</p>
+<br>  
+<p>The Gardner Center is in a unique position to connect learning in the community to the university – and vice versa – and seeks every opportunity to, in John Gardner’s words, “pierce the eucalyptus curtain,” in respectful, reciprocal relationships that benefit the campus and its neighbors.  
+         
           <br> 
 
          </div>
