additional css files added

--- a/index.new.html
+++ b/index.new.html
@@ -10,9 +10,9 @@
   <link rel="shortcut icon" href="/images/home-favicon.ico?218918666"/>
   <title>HOME</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?4083030058"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?257382971"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4152896167" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="/css/site_global.css?4083030058"/>
+  <link rel="stylesheet" type="text/css" href="/css/master_a-master.css?257382971"/>
+  <link rel="stylesheet" type="text/css" href="/css/index.css?4152896167" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
