changes for week

--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,7 +7,11 @@
 
 <br>
 <br>
-<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=21106" target="_blank">Policy Analyst</a>
+<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=21106" target="_blank">Project Facilitator</a>
+<br>
+<br>
+<a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=62109" target="_blank">Policy Analyst</a>
+<br>
 <br>
 <a class="link-underlined" href="https://stanfordcareers.stanford.edu/job-search?jobId=22385" target="_blank">Quantitative Research Associate</a>
 
