--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -90,6 +90,12 @@
 	  <p>Social Science Research Associate</p>
 (650) 724-8462<br>	 
  <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
+<br>
+          <a class="header-link" href="/about_jgc/team_bios/jamila.html">Jamila Henderson</a>
+-	  <p>Policy Analyst</p>
+(650) 736-8594<br>	 
+ <p><a href="mailto:jhender2@stanford.edu">jhender2@stanford.edu</a></p>
+          <br>
           <br>
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
 -	  <p>Senior Community Engagement Associate</p>
