updates with target syntax

--- a/index.new.html
+++ b/index.new.html
@@ -50,7 +50,7 @@
         <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/reports/Berkeley004%20Raising%20the%20bar4%20Executive%20Summary.pdf">CALIFORNIA’S <br/>CONTINUATION HIGH SCHOOLS</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/reports/Berkeley004%20Raising%20the%20bar4%20Executive%20Summary.pdf" target="_blank">CALIFORNIA’S <br/>CONTINUATION HIGH SCHOOLS</a></p>
         <p id="u1040-7">&nbsp;</p>
         <p id="u1040-9">by Jorge Ruiz de Velasco,</p>
         <p id="u1040-11">Associate Director</p>
@@ -206,7 +206,7 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="http://edpov.stanford.edu/events/prudence-carter-and-sean-reardon-workshop-poverty-inequality-and-education">Prudence Carter: The Workshop on Poverty, Inequality, and Education</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://edpov.stanford.edu/events/prudence-carter-and-sean-reardon-workshop-poverty-inequality-and-education" target="_blank">Prudence Carter: The Workshop on Poverty, Inequality, and Education</a></p>
        <p>&nbsp;</p>
        <p>DATE: Tuesday, October 8, 2013&nbsp; TIME: 5:15 pm — 7:00 pm</p>
        <p>LOCATION: CERAS Learning Hall, Stanford University</p>
@@ -216,7 +216,7 @@
      <div class="grpelem" id="u1022"><!-- simple frame --></div>
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
       <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
-      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/publications/BtSMathPlacementPolicyIssueBrief2012.pdf"><span id="u7466-3">A New Approach to Placement Criteria</span></a></p>
+      <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/resources/publications/BtSIssueBrief10.3.13.pdf" target="_blank"><span id="u7466-3">A New Approach to Placement Criteria</span></a></p>
       <p id="u7466-7">In a typical year, approximately 90% of Unified School District graduates who enroll at City College of San Francisco (CCSF) are placed into remedial English. With the goal of improving completion rates at CCSF by reducing remediation, the lorem ipsum dolor set lorem ipsum dolor set Gardner Center and Bridge to Success have partnered to use data to identify criteria other than placement tests that would enable students to streamline their path to college&#45;level coursework and graduation. In a typical year, approximately 90% of San Francisco lorem ipsum dolor set.</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
@@ -228,7 +228,7 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://annenberginstitute.org/publication/college-readiness-indicator-systems-voices-urban-education-38"><span id="u8392-3">College Readiness Indicator Systems</span></a></p>
+      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="http://annenberginstitute.org/publication/college-readiness-indicator-systems-voices-urban-education-38" target="_blank"><span id="u8392-3">College Readiness Indicator Systems</span></a></p>
       <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/graciela-u8409.jpg" alt="" width="105" height="150"/></span></span></span>When students are not in school, they miss the lorem ipsum dolor set opportunity to grow academically, socially, and emotionally. These skills are critical for continued success in school, in the community, and onward into adulthood. At the request of the Redwood City 2020 collaborative, the Gardner Center conducted a linked&#45;data analysis to explore the causes consequences that are present the lorem ipsum dolor set lorem ipsum dolor set in the community.</p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
