--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ document.createElement("article" );
 				<div class="feature_text">
 					<ul class="pdf">
 
-<li><a class="link-homepage-feature" href="href="/resources/publications/RWC_CS_IB_2014.pdf"">Program Participation & Student Outcomes in Redwood City Community Schools</a></li> 
+<li><a class="link-homepage-feature" href="/resources/publications/RWC_CS_IB_2014.pdf">Program Participation & Student Outcomes in Redwood City Community Schools</a></li> 
 
 <li><a class="link-homepage-feature" href="http://gardnercenter.stanford.edu/resources/publications/GGUSDIssueBrief.pdf">Examining Students' Math Course-Taking & Educational Outcomes in GGUSD</a></li>
 
