--- a/our_work/content-pfa.html
+++ b/our_work/content-pfa.html
@@ -12,11 +12,15 @@
 
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
+<li>First 5 San Mateo County</li>
 <li>Redwood City School District</li>
 <li>San Mateo County Office of Education</li>
 </ul>
 <br>
 <h1 class="content-text-header">Publications</h1>
+<ul>
+<li>A Longitudinal View of Educational Outcomes for Preschool for All Participants in Redwood City School District (2014) (<a href="/resources/publications/PFA_IssueBrief_2014.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/PFA_Snapshot_2014.pdf" class="link-no-underline">Snapshot</a>)</li>
+</ul>
 <ul>
 <li>Educational Outcomes for Preschool for All Participants in Redwood City School District - Update (2012) (<a href="/resources/publications/PFA_IssueBrief2012_final 9.24.12.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/PFA_Snapshot2012_Final.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
@@ -27,17 +31,13 @@
     </div> <!--end right side box div-->
     </aside>
 
-<p>With an aim of ensuring “access for all three and four year olds to high quality care and education that promotes success in school and life,” (San Mateo County Office of Education, n.d.) Preschool for All San Mateo County was established in 2004 as a five-year demonstration project aimed at reducing the achievement gap by supporting high-quality preschool programs for three- and four-year old children. Preschool for All San Mateo County (PFA) contracted with public school districts, non-profit agencies, and family-based child care providers to offer preschool services, setting quality standards and supporting partners in meeting these standards with funding for professional development, program assessment, and quality improvement. Many national studies have shown the value of preschool programs; San Mateo County wanted to know if PFA met the needs of the underserved students in its own community.
+<p>Preschool for All San Mateo County (PFA) was established in 2004 as a five-year demonstration project aimed at reducing the achievement gap by supporting high-quality preschool programs for three- and four-year old children. PFA contracted with public school districts, non-profit agencies, and family-based child care providers to offer preschool services, setting quality standards and supporting partners in meeting these standards with funding for professional development, program assessment, and quality improvement. Many national studies have shown the value of preschool programs; San Mateo County wanted to know if PFA met the needs of the underserved students in its own community.</p> 
 <br>
+<p>At the request of partners in the Youth Data Archive, the Gardner Center has conducted several analyses examining school-based outcomes for PFA participants who went on to attend elementary school in Redwood City School District (RCSD). Using longitudinal data from the Youth Data Archive to link individual PFA student records to their elementary school records, Gardner Center researchers found that children from the highest-risk groups who participated in Preschool for All matched or outperformed their peers in five report card subjects—math, listening/speaking, reading, writing and work study skills. Academic gains were also greater for those who participated in the program for two years versus one year.</p>
 <br>
-At the request of partners in the Youth Data Archive, the Gardner Center has conducted two analyses examining school-based outcomes for PFA participants who went on to attend elementary school in Redwood City School District. Using longitudinal data from the Youth Data Archive to link individual PFA student records to their elementary school records, Gardner Center researchers found that, after adjusting the data to control for differences in student characteristics, children who participated in Preschool for All matched or outperformed their peers in five report card subjects—math, listening/speaking, reading, writing and work study skills—as well as on standardized tests in math and English Language Arts. 
+<p>The study found that children in nearly all of the highest-need groups—including Latino students, low income students, and students from lower educated households—as well as PFA participants who attended an RCSD community school, exhibited stronger listening/speaking and work-study skills, than students from similar backgrounds who did not attend Preschool for All and PFA participants who attended a traditional RCSD elementary school. Listening/speaking skills are particularly important to successfully meeting California’s Common Core State Standards, which emphasize verbalizing or explaining in writing student thought processes and articulating how they came to a solution or conclusion. Work study skills reflect student habits such as completing schoolwork on time and following directions, which supports the Common Core’s emphasis on student readiness for college and careers.</p>
 <br>
-<br>
-Academic gains were greater for those who participated in the program for two years versus one year. The study found that children from the highest-risk groups particularly benefitted from the program. PFA students who later took part in the federal Free and Reduced Price Lunch program at their elementary school had higher adjusted proficiency rates than comparable non-participants in many of the five report card subjects from kindergarten through second grade. Additionally, children in nearly all of the highest-need groups—including Latino students, English language learners and participants in the Free and Reduced Price Lunch program—exhibited stronger work-study skills, particularly in kindergarten and first grade, than students from similar backgrounds who did not attend Preschool for All.
-<br>
-<br>
-Detailed findings and methodologies can be found in the research publications at right.</p>
-
+<p>Detailed findings and methodologies can be found in the research publications at right.</p>
          </div>
 
         
